[package]
name = "dragonfly"
version = "0.1.0"
edition = "2021"


[dependencies.bytemuck]
# Crate link: https://crates.io/crates/bytemuck
version = "1.18.0"
features = ["derive"]

[dependencies.env_logger]
# Crate link: https://crates.io/crates/env_logger
version = "0.11.5"

[dependencies.log]
# Crate link: https://crates.io/crates/log
version = "0.4.22"

[dependencies.pollster]
# Crate link: https://crates.io/crates/pollster
version = "0.3.0"

[dependencies.wgpu]
# Crate link: https://crates.io/crates/wgpu
version = "22.1.0"

[dependencies.winit]
# Crate link: https://crates.io/crates/winit
version = "0.30.5"
